[tool.poetry]
name = "oauth-template"
version = "0.1.0"
description = ""
authors = ["Andreas Lay <andreas.lay@gmail.com>", "Matt Alioto <matthew.j.alioto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "~1.36"
pyjwt = "~2.8"
cryptography = "~42"
supervisor = "~4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
